--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-bootstrap-confirmation": "^1.0.4",
     "react-crud-icons": "^1.2.2",
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.3",
